# auto-etl

./: .gitignore  .pylintrc  README.md  pyproject.toml
src/: auto_etl.py  main.py
src/app/: etl_exceptions.py  logger.py  utils.py
src/app/api/: __init__.py  end.py
src/app/services/: query_builder.py
src/app/services/config_parser/: __init__.py  parser.py
src/app/services/query_builder/: __init__.py  dialact.py  dialect.py  join_queries.py  query_builder.py
tests/: Auto_ETL_Metadata_Mapping_V1.xlsx  Source_target_Mappings_v.1.0.xlsx  sample_config.json  sample_join_case.txt
