[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kumar umang <umang.kumar@clairvoyantsoft.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.6"
sqlalchemy = "^2.0.7"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
